// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcquisitionPanel tests Should render the SummaryPanel 1`] = `
<Fragment>
  <div
    className="summary-panel__rows"
  >
    <div
      className="section-header"
    >
      Acquisition
    </div>
    <div
      className="summary-panel__row"
    >
        
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Date
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Acquisition Date"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input"
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col "
      >
        <label
          className="summary-label"
        >
          Type
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Acquisition Type"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Demographics
    </div>
    <div
      className="summary-panel__row"
    >
       
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Birthdate
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Birthdate"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input"
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            style={
              {
                "width": "15rem",
              }
            }
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Gender
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Gender"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Location
    </div>
    <div
      className="summary-panel__row"
    >
       
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Date
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Move Date"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input"
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Location
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Location"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Cage
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Cage"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            defaultValue="N/A"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Account, Colony, and Ownership
    </div>
    <div
      className="summary-panel__row1"
    >
         
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Account
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Account"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Colony
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Colony"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          IACUC
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="IACUC"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="summary-panel__row"
    >
         
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Owner
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="TxBiomed - Texas Biomedical Research Institute"
              title="Owner"
            />
          }
          placement="right"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            defaultValue="TxBiomed - Texas Biomedical Research Institute"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Resp. Inst.
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="TxBiomed - Texas Biomedical Research Institute"
              title="Responsible Institution"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            defaultValue="TxBiomed - Texas Biomedical Research Institute"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Diet
    </div>
    <div
      className="summary-panel__row"
    >
       
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Date
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Diet Date"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input "
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Diet
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Diet"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <InfoPanel
      includeBullets={true}
      infoMessages={
        [
          {
            "key": 1,
            "value": "Please review data before saving.",
          },
          {
            "key": 2,
            "value": "Hover cursor over fields for full text.",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`AcquisitionPanel tests Should render the SummaryPanel for multiple acquisitions 1`] = `
<Fragment>
  <div
    className="summary-panel__rows"
  >
    <div
      className="section-header"
    >
      Acquisition
    </div>
    <div
      className="summary-panel__row"
    >
        
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Date
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Acquisition Date"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input"
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col "
      >
        <label
          className="summary-label"
        >
          Type
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Acquisition Type"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col "
      >
        <label
          className="summary-label summary-label-red"
        >
          # Animals
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message={2}
              title="Number of animals"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input summary-text-input-red"
            defaultValue={2}
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Demographics
    </div>
    <div
      className="summary-panel__row"
    >
       
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Birthdate
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Birthdate"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input"
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            style={
              {
                "width": "15rem",
              }
            }
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Gender
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Gender"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Location
    </div>
    <div
      className="summary-panel__row"
    >
       
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Date
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Move Date"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input"
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Location
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Location"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Cage
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Cage"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            defaultValue="N/A"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Account, Colony, and Ownership
    </div>
    <div
      className="summary-panel__row1"
    >
         
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Account
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Account"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Colony
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Colony"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          IACUC
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="IACUC"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="summary-panel__row"
    >
         
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Owner
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="TxBiomed - Texas Biomedical Research Institute"
              title="Owner"
            />
          }
          placement="right"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            defaultValue="TxBiomed - Texas Biomedical Research Institute"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Resp. Inst.
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="TxBiomed - Texas Biomedical Research Institute"
              title="Responsible Institution"
            />
          }
          placement="left"
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            defaultValue="TxBiomed - Texas Biomedical Research Institute"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <div
      className="section-header"
    >
      Diet
    </div>
    <div
      className="summary-panel__row"
    >
       
      <div
        className="summary-panel__col date-width"
      >
        <label
          className="summary-label"
        >
          Date
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              message="12/31/2022 4:00 PM"
              title="Diet Date"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-date-input "
            defaultValue="12/31/2022 4:00 PM"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
          />
        </OverlayTrigger>
      </div>
      <div
        className="summary-panel__col"
      >
        <label
          className="summary-label"
        >
          Diet
        </label>
        <OverlayTrigger
          defaultOverlayShown={false}
          overlay={
            <SummaryPopover
              title="Diet"
            />
          }
          trigger={
            [
              "hover",
              "focus",
            ]
          }
        >
          <input
            className="summary-text-input"
            onKeyPress={[Function]}
            onPasteCapture={[Function]}
            type="text"
          />
        </OverlayTrigger>
      </div>
    </div>
    <InfoPanel
      includeBullets={true}
      infoMessages={
        [
          {
            "key": 1,
            "value": "Multiple animals are being addeded!",
          },
          {
            "key": 2,
            "value": "Please review data before saving.",
          },
          {
            "key": 3,
            "value": "Hover cursor over fields for full text.",
          },
        ]
      }
    />
  </div>
</Fragment>
`;
